[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/SawarabiMincho-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GUIScript.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.898039, 0.227451, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.160784, 0.160784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 2
outline_color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 1180.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 106.0
margin_right = 1180.0
margin_bottom = 514.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 518.0
margin_right = 1180.0
margin_bottom = 620.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/BottomRow"]
margin_right = 200.0
margin_bottom = 102.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HealthSection"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 66.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HealthTween" type="Tween" parent="MarginContainer/Rows/BottomRow/HealthSection"]

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
margin_left = 204.0
margin_right = 1180.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 868.0
margin_top = 25.0
margin_right = 908.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "30"

[node name="AmmoSeparator" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 912.0
margin_top = 25.0
margin_right = 932.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "/"

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 936.0
margin_top = 25.0
margin_right = 976.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "30"
